--- a/Lecteur Youtube/Base.lproj/Main.storyboard
+++ b/Lecteur Youtube/Base.lproj/Main.storyboard
@@ -73,11 +73,27 @@
                     <navigationItem key="navigationItem" id="sHW-Ou-hUd"/>
                     <connections>
                         <outlet property="tableview" destination="laF-3b-n6S" id="Vzl-Iu-tjB"/>
+                        <segue destination="zWW-Ik-bRk" kind="show" identifier="VersVideo" id="PF0-yQ-yE8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1076" y="132.68365817091455"/>
+        </scene>
+        <!--Video Controller-->
+        <scene sceneID="fte-Sd-Ca7">
+            <objects>
+                <viewController id="zWW-Ik-bRk" customClass="VideoController" customModule="Lecteur_Youtube" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ROk-8d-UFr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="jDk-k0-ROQ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ORv-Pu-F5w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1817" y="135"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="d48-X9-tZL">
