--- a/Lecteur Youtube/Base.lproj/Main.storyboard
+++ b/Lecteur Youtube/Base.lproj/Main.storyboard
@@ -87,13 +87,32 @@
                     <view key="view" contentMode="scaleToFill" id="ROk-8d-UFr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yk9-7u-cdz">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Yk9-7u-cdz" firstAttribute="leading" secondItem="jDk-k0-ROQ" secondAttribute="leading" id="2aq-wV-GYB"/>
+                            <constraint firstItem="Yk9-7u-cdz" firstAttribute="top" secondItem="jDk-k0-ROQ" secondAttribute="top" id="HrY-h6-ae9"/>
+                            <constraint firstItem="Yk9-7u-cdz" firstAttribute="trailing" secondItem="jDk-k0-ROQ" secondAttribute="trailing" id="Zko-xv-jFK"/>
+                            <constraint firstItem="Yk9-7u-cdz" firstAttribute="bottom" secondItem="jDk-k0-ROQ" secondAttribute="bottom" id="uLV-bU-Mbj"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="jDk-k0-ROQ"/>
                     </view>
+                    <connections>
+                        <outlet property="webview" destination="Yk9-7u-cdz" id="VKs-8g-xUQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ORv-Pu-F5w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1817" y="135"/>
+            <point key="canvasLocation" x="1816.8" y="134.48275862068968"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="d48-X9-tZL">
